   use gdb-multiarch (if available, as packaged on Debian/Ubuntu), and set
   architecture and gnutarget accordingly in gdb. This supports x86, x86_64,
   and ARM for now, so that reports from all these architectures can be
   retraced on an x86_84 machine. (LP: #1044437)
 * launchpad.py: Add "architecture" option to process reports for a foreign
   architecture.

Bug fixes:
 * Fix test_find_package_desktopfile test to not consider packages with only
   one "NoDisplay=true" .desktop file for the "has one desktop file" test.
 * report.py, mark_ignore(): Use home directory of actual effective user, not
   of $HOME. Fixes ignore file when using through sudo.
 * apport-cli: Fix showing of prompt. Thanks Dmitry Shachnev!
 * fileutils.py, mark_report_upload(): Do not try to remove the .uploaded file,
   as this is not owned by the user.
 * backends/packaging-apt-dpkg.py, install_packages(): Set mirror to the one in
   the sandbox config.

2.6.3 (2012-11-30):
-------------------
 * test_signal_crashes.py: Fix incompatibility with Python 3.3.
 * test_signal_crashes.py: Allow XDG_RUNTIME_DIR environment variable, as it
   only shows whether or not it is set. (Test regression from 2.6)
 * debian.py: Only reject reports with useless stack traces if the report
   actually has a stack trace at all.
 * debian.py: Fix UTF-8 string handling. Thanks Ritesh Raj Sarraf.
 * debian.py: Fix crash on broken "Package" fields, as generated by current
   Debian/Ubuntu dkms package.
 * data/apport: Call fsync when writing upstart crash reports.
 * report.py, add_gdb_info(): Handle libnih's assertion messages.
   (LP: #997359)
 * apport-gtk, apport-kde: Don't provide an option to restart a crashed
   application when the crash occurred in a thread (LP: #1033902).
 * apport-retrace: Disallow option -C without option -S. Thanks Kyle Nitzsche.
 * fileutils.py, mark_report_upload(): Refresh the .upload stamps if a previous
   version of the report was already uploaded, but another instance of the