@@ -205,6 +205,8 @@ def _run_hook(report, ui, hook):
     except StopIteration:
         return True
     except:
+        hookname = os.path.splitext(os.path.basename(hook))[0].replace('-', '_')
+        report['HookError_' + hookname] = traceback.format_exc()
         apport.error('hook %s crashed:', hook)
         traceback.print_exc()
 
